--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="font-mono max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
+<div class="max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
       <h1 class="text-3xl tracking-wide">総勘定元帳</h1>
