--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-gray-50">
+  <body class="font-mono bg-gray-50">
     <% if authenticated? && company_selected? %>
       <%= render 'shared/header' %>
     <% end %>
