--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,7 @@
-<div class="font-mono max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12">
+<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black">
-      <h1 class="text-3xl font-mono tracking-wide">事業所選択</h1>
+      <h1 class="text-3xl tracking-wide">事業所選択</h1>
     </div>
 
     <div class="flex flex-col items-center space-y-4 p-8">
