--- a/app/views/financial_closings/edit.html.erb
+++ b/app/views/financial_closings/edit.html.erb
@@ -1,10 +1,10 @@
-<div class="font-mono max-w-xl min-w-2xs sm:min-w-xl mx-auto">
+<div class="max-w-xl min-w-2xs sm:min-w-xl mx-auto">
   <div class="bg-white border-4 border-black shadow-2xl mt-12">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex items-center space-x-2">
       <h1 class="text-3xl tracking-wide">決算処理</h1>
     </div>
 
-    <p class="font-mono font-bold text-center m-4"><%= @financial_closing.start_date.strftime('%Y年%m月%d日') %> ~ <%= @financial_closing.end_date.strftime('%Y年%m月%d日') %></p>
+    <p class="font-bold text-center m-4"><%= @financial_closing.start_date.strftime('%Y年%m月%d日') %> ~ <%= @financial_closing.end_date.strftime('%Y年%m月%d日') %></p>
     <%= form_with model: @financial_closing, url: financial_closing_path, method: "PATCH", class: "p-8" do |form| %>
       <% if @financial_closing.errors.any? %>
         <div class="bg-red-50 border-2 border-red-800 text-red-800 px-6 py-4 mb-6">
