--- a/app/views/financial_closings/index.html.erb
+++ b/app/views/financial_closings/index.html.erb
@@ -1,4 +1,4 @@
-<div class="font-mono max-w-xl min-w-2xs sm:min-w-xl mx-auto">
+<div class="max-w-xl min-w-2xs sm:min-w-xl mx-auto">
   <div class="bg-white border-4 border-black shadow-2xl mt-12">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex items-center space-x-2">
       <h1 class="text-3xl tracking-wide">決算処理</h1>
