--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
-<header class="font-mono bg-white border-b-4 border-black shadow-2xl">
+<header class="bg-white border-b-4 border-black shadow-2xl">
   <div class="container mx-auto p-4">
     <div class="flex justify-between items-center">
       <div class="flex items-center space-x-8">
-        <%= link_to root_path, class: "text-3xl font-mono font-black tracking-widest text-black hover:text-gray-700 transition-colors" do %>
+        <%= link_to root_path, class: "text-3xl font-black tracking-widest text-black hover:text-gray-700 transition-colors" do %>
           KAIKEI
         <% end %>
 
