--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -46,5 +46,12 @@
         <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
       </div>
     <% end %>
+
+    <hr class="border-2" />
+
+    <%= form_with model: @company, local: true, method: "DELETE", class: "p-8" do |form| %>
+      <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">事業所削除</h2>
+      <%= form.submit "事業所を削除する", class: "block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
+    <% end %>
   </div>
 </div>
