--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,5 +34,12 @@
         </div>
       </div>
     </div>
+
+    <hr class="border-2" />
+
+    <%= form_with model: @user, local: true, method: "DELETE", class: "p-8" do |form| %>
+      <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">アカウント削除</h2>
+      <%= form.submit "アカウントを削除する", class: "block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
+    <% end %>
   </div>
 </div>
