--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12">
+<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12" data-controller="company-detail">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black">
       <h1 class="text-3xl tracking-wide">事業所設定</h1>
@@ -49,9 +49,45 @@
 
     <hr class="border-2" />
 
-    <%= form_with model: @company, local: true, method: "DELETE", class: "p-8" do |form| %>
+    <div class="p-8">
       <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">事業所削除</h2>
-      <%= form.submit "事業所を削除する", class: "block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
-    <% end %>
+      <button
+        class="block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
+        data-action="click->company-detail#confirmCompanyDestruction">
+        事業所を削除する
+      </button>
+    </div>
+    <dialog aria-labelledby="company-destruction-dialog-label" class="mx-auto my-auto" data-company-detail-target="companyDstructionDialog">
+      <%= form_with model: @company, local: true, method: "DELETE", class: "p-8 space-y-4 border-2" do |form| %>
+        <h1 id="company-destruction-dialog-label" class="text-3xl text-red-700 text-center tracking-wide">事業所削除</h1>
+        <p>
+          事業所を削除すると全ての会計データが削除され永久に失われます。
+        </p>
+        <p>
+          削除する場合は、事業所名を入力してください（<%= @company.name %>）
+        </p>
+          <table class="w-full border-collapse border-2">
+            <tr>
+              <th scope="row" class="border">
+                <label for="company-desruction-confirmation-text" class="block w-full h-full border-black bg-gray-100 py-2 text-center">事業所名</label>
+              </th>
+              <td class="border">
+                <input type="text" id="company-desruction-confirmation-text" name="company-desruction-confirmation-text"
+                        class="block w-full h-full px-2 py-2 focus:outline-none"
+                        data-action="input->company-detail#onCompanyDestructionConfirmationTextChange"
+                        data-correct-confirmation-text="<%= @company.name %>">
+              </td>
+            </tr>
+          </table>
+          <div class="flex space-x-4 justify-center">
+            <%= form.submit "削除", class: "block py-4 px-12 bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
+            <button type="button"
+              class="block py-4 px-12 bg-white hover:bg-black focus:bg-black border-2 border-black text-xl text-black hover:text-white focus:text-white tracking-widest cursor-pointer"
+              data-action="click->company-detail#closeCompanyDestructionDialog">
+              キャンセル
+            </button>
+          </div>
+      <% end %>
+    </dialog>
   </div>
 </div>
