--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12">
+<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12" data-controller="user-detail">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black">
       <h1 class="text-3xl tracking-wide">アカウント設定</h1>
@@ -37,9 +37,42 @@
 
     <hr class="border-2" />
 
-    <%= form_with model: @user, local: true, method: "DELETE", class: "p-8" do |form| %>
+    <div class="p-8">
       <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">アカウント削除</h2>
-      <%= form.submit "アカウントを削除する", class: "block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
-    <% end %>
+      <button
+        class="block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
+        data-action="click->user-detail#confirmUserDestruction">
+        アカウントを削除する
+      </button>
+    </div>
+    <dialog aria-labelledby="user-destruction-dialog-label" class="mx-auto my-auto" data-user-detail-target="userDstructionDialog">
+      <%= form_with model: @user, local: true, method: "DELETE", class: "p-8 space-y-4 border-4" do |form| %>
+        <h1 id="user-destruction-dialog-label" class="text-3xl text-red-700 text-center tracking-wide">アカウント削除</h1>
+        <p>
+          削除する場合は、アカウントのメールアドレスを入力してください（<%= @user.email_address %>）
+        </p>
+        <table class="w-full border-collapse border-2">
+          <tr>
+            <th scope="row" class="border">
+              <label for="user-desruction-confirmation-text" class="block w-full h-full border-black bg-gray-100 py-2 text-center">メールアドレス</label>
+            </th>
+            <td class="border">
+              <input type="text" id="user-desruction-confirmation-text" name="user-desruction-confirmation-text" required
+                      class="block w-full h-full px-2 py-2 focus:outline-none"
+                      data-action="input->user-detail#onUserDestructionConfirmationTextChange"
+                      data-correct-confirmation-text="<%= @user.email_address %>">
+            </td>
+          </tr>
+        </table>
+        <div class="flex space-x-4 justify-center">
+          <%= form.submit "削除", class: "block py-4 px-12 bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer" %>
+          <button type="button"
+            class="block py-4 px-12 bg-white hover:bg-black focus:bg-black border-2 border-black text-xl text-black hover:text-white focus:text-white tracking-widest cursor-pointer"
+            data-action="click->user-detail#closeUserDestructionDialog">
+            キャンセル
+          </button>
+        </div>
+      <% end %>
+    </dialog>
   </div>
 </div>
