--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -81,10 +81,10 @@
           </table>
           <div class="flex space-x-4 justify-center">
             <%= form.submit "削除",
-                  class: "block py-4 px-12 bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer",
+                  class: "block py-4 px-12 bg-white focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
                   data: { turbo_submits_with: "削除中" } %>
             <button type="button"
-              class="block py-4 px-12 bg-white hover:bg-black focus:bg-black border-2 border-black text-xl text-black hover:text-white focus:text-white tracking-widest cursor-pointer"
+              class="block py-4 px-12 bg-white focus:bg-black border-2 border-black text-xl text-black focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50"
               data-action="click->company-detail#closeCompanyDestructionDialog">
               キャンセル
             </button>
