--- a/app/views/company/members/index.html.erb
+++ b/app/views/company/members/index.html.erb
@@ -1,1 +1,36 @@
-メンバー一覧画面だよ〜〜
+<div class="max-w-6xl min-w-2xs sm:min-w-2xl mx-auto min-h-screen">
+  <div class="bg-white border-4 border-black shadow-2xl">
+    <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
+      <h1 class="text-3xl tracking-wide">メンバー管理</h1>
+    </div>
+
+    <div>
+      <table class="min-w-full border-collapse">
+        <thead class="bg-gray-100">
+          <tr>
+            <th class="px-4 py-3 border-[0.5] border-black text-center text-sm tracking-wider">メールアドレス</th>
+            <th class="px-4 py-3 border-[0.5] border-black text-center text-sm tracking-wider">操作</th>
+          </tr>
+        </thead>
+        <tbody class="bg-white">
+          <% @members.each do |member| %>
+            <tr class="hover:bg-yellow-100">
+              <td class="px-4 py-3 border-[0.5] border-black whitespace-nowrap text-sm">
+                <%= member.email_address %>
+              </td>
+              <td class="px-4 py-3 border-[0.5] border-black text-center text-sm">
+                <div class="flex justify-center space-x-2">
+                  <%= button_to "削除", "https://example.com", method: :delete,
+                                data: { turbo_confirm: "本当に削除しますか？" },
+                                class: "text-black hover:bg-gray-200 px-2 py-1 border border-black bg-transparent" %>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <%= paginate @members %>
+  </div>
+</div>
