--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -50,13 +50,52 @@
     <hr class="border-2" />
 
     <div class="p-8">
-      <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">事業所削除</h2>
+      <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">取り消し不可の操作</h2>
       <button
-        class="block py-4 px-12 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
+        class="block min-w-3xs p-4 mx-auto mb-4 bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
+        data-action="click->company-detail#openCompanyExitDialog">
+        事業所から脱退する
+      </button>
+      <button
+        class="block min-w-3xs p-4 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
         data-action="click->company-detail#confirmCompanyDestruction">
         事業所を削除する
       </button>
     </div>
+    <dialog aria-labelledby="company-exit-dialog-label" class="mx-auto my-auto" data-company-detail-target="companyExitDialog">
+      <%= form_with url: company_exit_path, local: true, class: "p-8 space-y-4 border-4" do |form| %>
+        <h1 id="company-exit-dialog-label" class="text-3xl text-red-700 text-center tracking-wide">事業所から脱退する</h1>
+        <p>
+          脱退するとこの事業所にアクセスできなくなります。</br>アクセスするためには事業所に所属するユーザーから再度招待される必要があります。
+        </p>
+        <p>
+          脱退する場合は、事業所名を入力してください（<%= @company.name %>）
+        </p>
+          <table class="w-full border-collapse border-2">
+            <tr>
+              <th scope="row" class="border">
+                <label for="company-desruction-confirmation-text" class="block w-full h-full border-black bg-gray-100 py-2 text-center">事業所名</label>
+              </th>
+              <td class="border">
+                <input type="text" id="company-desruction-confirmation-text" name="company-desruction-confirmation-text" required
+                        class="block w-full h-full px-2 py-2 focus:outline-none"
+                        data-action="input->company-detail#onCompanyExitConfirmationTextChange"
+                        data-correct-confirmation-text="<%= @company.name %>">
+              </td>
+            </tr>
+          </table>
+          <div class="flex space-x-4 justify-center">
+            <%= form.submit "脱退",
+                  class: "block py-4 px-12 bg-white focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
+                  data: { turbo_submits_with: "脱退中" } %>
+            <button type="button"
+              class="block py-4 px-12 bg-white focus:bg-black border-2 border-black text-xl text-black focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50"
+              data-action="click->company-detail#closeCompanyExitDialog">
+              キャンセル
+            </button>
+          </div>
+      <% end %>
+    </dialog>
     <dialog aria-labelledby="company-destruction-dialog-label" class="mx-auto my-auto" data-company-detail-target="companyDstructionDialog">
       <%= form_with model: @company, local: true, method: "DELETE", class: "p-8 space-y-4 border-4" do |form| %>
         <h1 id="company-destruction-dialog-label" class="text-3xl text-red-700 text-center tracking-wide">事業所削除</h1>
