--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-white border-b-4 border-black shadow-2xl">
+<header class="bg-white border-b-4 border-black">
   <div class="container mx-auto p-4">
     <div class="flex justify-between items-center">
       <div class="flex items-center space-x-8">
