flash メッセージの表示を Toast UI で統一する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
   </head>
 
   <body class="font-mono bg-gray-50">
+    <%= render 'shared/flash' %>
+
     <% if authenticated? %>
       <%= render 'shared/header' %>
     <% end %>
