--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@ button[popovertarget='financial-statements-menu'] {
 
 #financial-statements-menu {
   position-anchor: --financial-statements-menu;
-  position-area: bottom span-right;
+  position-area: right span-bottom;
 }
 
 button[popovertarget='user-profile-menu'] {
@@ -47,7 +47,7 @@ button[popovertarget='user-profile-menu'] {
 
 #user-profile-menu {
   position-anchor: --user-profile-menu;
-  position-area: bottom span-right;
+  position-area: right span-bottom;
 }
 
 button[popovertarget='company-menu'] {
@@ -56,5 +56,5 @@ button[popovertarget='company-menu'] {
 
 #company-menu {
   position-anchor: --company-menu;
-  position-area: bottom span-right;
+  position-area: right span-bottom;
 }
