テンプレート名を _header → _navigation に変更する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <%= render 'shared/flash' %>
 
     <% if authenticated? %>
-      <%= render 'shared/header' %>
+      <%= render 'shared/navigation' %>
     <% end %>
 
     <main class="container mx-auto my-12 flex">
