--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<header class="min-h-screen bg-white border-r-4 border-black">
+<header class="sticky top-0 botom-0 h-screen bg-white border-r-4 border-black">
   <div class="flex flex-col items-center justify-center space-y-8 p-4">
     <%= link_to root_path, class: "text-xl font-black tracking-widest text-black hover:text-gray-700 transition-colors" do %>
       KAIKEI
