--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <%= render 'shared/navigation' %>
     <% end %>
 
-    <main class="container mx-auto my-12 flex">
+    <main class="flex-1">
       <%= yield %>
     </main>
 
