--- a/app/views/journal_entries/index.html.erb
+++ b/app/views/journal_entries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="px-8 py-4 flex justify-between items-center">
+<div class="px-8 py-4 flex items-center space-x-4">
   <h1 class="text-3xl tracking-wide">仕訳一覧</h1>
   <%= link_to "新規仕訳", new_journal_entry_path, class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-2 px-4 border-2 border-black tracking-widest" %>
 </div>
