--- a/app/views/company/members/index.html.erb
+++ b/app/views/company/members/index.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-6xl min-w-2xs sm:min-w-2xl mx-auto min-h-screen" data-controller="members">
+<div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto py-12" data-controller="members">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
       <h1 class="text-3xl tracking-wide">メンバー管理</h1>
